# open-soundsource

./: .gitignore  Info.plist  LICENSE  PRIVACY.md  README.md  check_tap.swift  check_tap_props.swift  project.yml  test.swift  test_aggregate.swift  test_aggregate5.swift  test_audio_processes.swift  test_audio_unit.swift  test_bundle_id.swift  test_crash.swift  test_crash2.swift  test_crash5.swift  test_crash7.swift  test_mute.swift  test_routing_debug.swift  test_routing_engine.swift
.codegraph/: daemon.pid
App/: AppListView.swift  AudioManager.swift  Info.plist  OpenSoundSource.entitlements  OpenSoundSourceApp.swift
OpenSoundSource.xcodeproj/: project.pbxproj
Scripts/: cleanup_all.swift  cleanup_devices.swift  diagnose_brave_audio.swift  diagnose_fix_test.swift  diagnose_routing.swift  diagnose_samplerate.swift  release.sh  test_aggregate2.swift  test_aggregate3.swift  test_aggregate4.swift  test_apps.swift  test_chrome_audio.swift  test_crash3.swift  test_crash4.swift  test_crash6.swift  test_crash8.swift  test_crash9.swift  test_full_flow.swift  test_route_to_device.swift  test_routing.swift  test_tap_uid.swift  test_two_engine.swift
VirtualDriver/: CMakeLists.txt  OSS_Device.cpp  OSS_Device.hpp  OSS_PlugIn.cpp  VirtualDriver-Info.plist
poc/: Package.swift  check_app_uids.swift  check_chrome_playing.swift  check_default_device.swift  check_uid.swift  request_screen_capture.swift  tap_engine_different_device.swift  tap_engine_fix.swift  tap_engine_schedule.swift  tap_engine_test3.swift  tap_engine_test4.swift  tap_engine_verify.swift  tap_monitor.swift  (+8 more)
(+15 files in other folders)
